[package]
name = "rust-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
nix = { version = "0.27.1", features = ["process", "fs"] }
regex = "1.10.2"
termion = "3.0.0"
termios = "0.3.3"


[build]
rustc = ["-C", "link-args=-lncursesw"]
